# docs/swagger.json
@@ -4,6 +4,40 @@
         "contact": {}
     },
     "paths": {
+        "/user/googleAuth": {
+            "post": {
+                "description": "Google Auth",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User Authentication"
+                ],
+                "summary": "google auth",
+                "parameters": [
+                    {
+                        "description": "User Data",
+                        "name": "googleOAuthInput",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/user.GoogleOAuthInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.TokenObject"
+                        }
+                    }
+                }
+            }
+        },
         "/user/login": {
             "post": {
                 "description": "Login user",
@@ -183,7 +217,26 @@
     },
     "definitions": {
         "controllers.TokenObject": {
-            "type": "object"
+            "type": "object",
+            "properties": {
+                "accessToken": {
+                    "type": "string"
+                },
+                "refreshToken": {
+                    "type": "string"
+                }
+            }
+        },
+        "user.GoogleOAuthInput": {
+            "type": "object",
+            "required": [
+                "accessToken"
+            ],
+            "properties": {
+                "accessToken": {
+                    "type": "string"
+                }
+            }
         },
         "user.LoginUserInput": {
             "type": "object",
